--- a/JavaDemoGithubPractice/app/src/main/res/layout/activity_profile.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,26 +8,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:clipToPadding="true">
-    <!--tools:context=".ui.activity.ProfileActivity">-->
+    android:clipToPadding="true"
+    tools:context=".ui.activity.ProfileActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        android:theme="?appbar_theme">
+        >
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
             app:collapsedTitleGravity="start"
             app:expandedTitleGravity="top"
-            app:expandedTitleMarginStart="@dimen/spacing_x_large"
+            app:expandedTitleMarginStart="96dp"
             app:expandedTitleMarginTop="60dp"
             app:expandedTitleTextAppearance="@style/Toolbar.Expand.TitleText"
             android:paddingTop="0dp">
@@ -34,7 +34,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/user_avatar_bg"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="match_parent"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5"
                 android:fitsSystemWindows="true"
@@ -53,13 +53,14 @@
                 android:paddingStart="@dimen/spacing_normal"
                 android:paddingEnd="@dimen/spacing_normal"
                 android:paddingBottom="@dimen/spacing_normal"
-                android:layout_marginTop="50dp">
+                android:layout_marginTop="86dp">
+
             </RelativeLayout>
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 />
 
@@ -73,7 +74,7 @@
             app:tabGravity="fill"
             app:tabMode="fixed"
             app:tabTextAppearance="@style/TextAppearance.Design.Tab"
-            app:tabSelectedTextColor="@color/black_light"/>
+            app:tabSelectedTextColor="@color/colorPrimaryDark"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -93,9 +94,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:indeterminate="true"
             android:paddingEnd="@dimen/spacing_large"
             android:paddingStart="@dimen/spacing_large"
+            android:indeterminate="true"
             android:visibility="gone"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
