--- a/JavaDemoGithubPractice/app/src/main/res/layout/app_bar_main.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/layout/app_bar_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.javademogithubpractice.ui.activity.MainActivity">
 
 
+    <include layout="@layout/layout_appbar" />
     <include layout="@layout/content_main" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
