--- a/JavaDemoGithubPractice/app/src/main/res/layout/fragment_profile_info.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/layout/fragment_profile_info.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <androidx.core.widget.NestedScrollView
-    android:id="@+id/scroll_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,36 +30,70 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/repo_title_text"
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:lines="1"
+                    android:textSize="@dimen/text_large"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_large"/>
+                    android:text="Rays yu"
+                    android:paddingBottom="@dimen/spacing_small"
+                    android:paddingEnd="@dimen/spacing_small"
+                    android:paddingStart="@dimen/spacing_small"
+                    android:paddingTop="@dimen/spacing_small"/>
 
                 <TextView
-                    android:id="@+id/fork_info_text"
+                    android:id="@+id/bio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_small"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="@dimen/spacing_mini"/>
-
-                <TextView
-                    android:id="@+id/repo_desc_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_mini"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_small"
-                    android:visibility="gone"/>
+                    android:paddingBottom="@dimen/spacing_small"
+                    android:paddingEnd="@dimen/spacing_small"
+                    android:paddingStart="@dimen/spacing_small"
+                    android:paddingTop="@dimen/spacing_small"/>
 
                 <TextView
-                    android:id="@+id/repo_created_info_text"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/company"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_mini"
+                    android:drawableStart="@drawable/ic_group_secondary"
+                    android:paddingBottom="@dimen/spacing_small"
+                    android:paddingEnd="@dimen/spacing_small"
+                    android:paddingStart="@dimen/spacing_small"
+                    android:paddingTop="@dimen/spacing_small"
+                    android:drawablePadding="@dimen/spacing_large"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:selectableItemBackground"
+                    android:drawableStart="@drawable/ic_mail_secondary"
+                    android:paddingBottom="@dimen/spacing_small"
+                    android:paddingEnd="@dimen/spacing_small"
+                    android:paddingStart="@dimen/spacing_small"
+                    android:paddingTop="@dimen/spacing_small"
+                    android:drawablePadding="@dimen/spacing_large"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/link"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/ic_link_secondary"
+                    android:paddingStart="@dimen/spacing_small"
+                    android:paddingEnd="@dimen/spacing_small"
+                    android:paddingTop="@dimen/spacing_small"
+                    android:paddingBottom="@dimen/spacing_small"
+                    android:background="?android:selectableItemBackground"
+                    android:drawablePadding="@dimen/spacing_large"
+                    android:textSize="@dimen/text_small"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_small"/>
+                    android:lines="1"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -67,103 +101,121 @@
                     android:minHeight="64dp">
 
                     <LinearLayout
-                        android:id="@+id/issues_lay"
+                        android:id="@+id/members_lay"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
+                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/issues_num_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:text=""
+                            android:text="@string/view"
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:text="@string/issues"
+                            android:text="@string/members"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/stargazers_lay"
+                        android:id="@+id/followers_lay"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
+                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/stargazers_num_text"
+                            android:id="@+id/followers_num_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
                             android:text=""
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:text="@string/stargazers"
+                            android:text="@string/followers"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/froks_lay"
+                        android:id="@+id/following_lay"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
-                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/forks_num_text"
+                            android:id="@+id/following_num_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
                             android:text=""
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:text="@string/forks"
+                            android:text="@string/following"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/watchers_lay"
+                        android:id="@+id/repos_lay"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
+                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/watchers_num_text"
+                            android:id="@+id/repos_num_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
                             android:text=""
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:text="@string/watchers"
+                            android:text="@string/repositories"
+                            android:textSize="@dimen/text_mini"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/gists_lay"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/spacing_mini"
+                        android:layout_weight="1"
+                        android:background="@color/white"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/gists_num_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            android:textSize="@dimen/text_large"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/gists"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
                 </LinearLayout>
@@ -173,30 +225,39 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/orgs_lay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/card_view_vertical_margin"
             android:layout_marginEnd="@dimen/card_view_horizontal_margin"
             android:layout_marginStart="@dimen/card_view_horizontal_margin"
             android:layout_marginTop="@dimen/card_view_vertical_margin"
+            app:cardBackgroundColor="@color/colorPrimaryDark"
             app:cardCornerRadius="@dimen/card_view_corner_radius"
             app:contentPaddingTop="@dimen/spacing_normal"
             app:contentPaddingBottom="@dimen/spacing_normal">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
                 <TextView
-                    android:id="@+id/readme_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/colorAccent"
-                    android:text="@string/readme"
+                    android:textColor="@color/white"
+                    android:text="@string/organizations"
                     android:textSize="@dimen/text_large"
                     android:layout_marginBottom="@dimen/spacing_mini"
                     android:layout_marginStart="@dimen/spacing_normal"/>
-            </RelativeLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/orgs_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
+
 </androidx.core.widget.NestedScrollView>
