--- a/JavaDemoGithubPractice/app/src/main/res/layout/layout_appbar.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/layout/layout_appbar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <com.google.android.material.appbar.AppBarLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,7 +12,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/colorPrimaryDark"
+        app:titleTextColor="@color/white"
         app:popupTheme="?popup_theme">
 
     </androidx.appcompat.widget.Toolbar>
