--- a/JavaDemoGithubPractice/app/src/main/res/layout/nav_header_main.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/layout/nav_header_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@color/colorPrimaryDark"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_margin"
@@ -36,11 +36,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="DemoJustHub"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+                android:textColor="@color/white"/>
 
             <TextView
                 android:id="@+id/mail"
                 android:layout_width="wrap_content"
+                android:textColor="@color/white"
                 android:layout_height="wrap_content"
                 android:text="An android client for GitHub."
                 android:lines="1"/>
