--- a/JavaDemoGithubPractice/app/src/main/res/menu/activity_main_drawer.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,33 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group
-        android:id="@+id/my_account"
-        android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_logout"
-            android:checkable="false"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/logout"/>
-    </group>
-
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_news"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="News" />
+            android:id="@+id/nav_global_news"
+            android:icon="@drawable/ic_global_news_black_24dp"
+            android:title="Global News" />
         <item
-            android:id="@+id/nav_notifications"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Notifications" />
+            android:id="@+id/nav_popular_repo"
+            android:icon="@drawable/ic_popular_repo_black_24dp"
+            android:title="Popular repositories" />
         <item
             android:id="@+id/nav_repository"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_repo_black_24dp"
             android:title="My Repository" />
         <item
             android:id="@+id/nav_stars"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Stars" />
+            android:icon="@drawable/ic_stars_black_24dp"
+            android:title="My Stars" />
     </group>
 
 
@@ -39,9 +29,20 @@
                 android:title="Share" />
             <item
                 android:id="@+id/nav_about"
-                android:icon="@android:drawable/ic_menu_day"
+                android:icon="@drawable/ic_info_black_24dp"
                 android:title="About" />
         </menu>
     </item>
+
+    <group
+        android:id="@+id/my_account"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_logout"
+            android:checkable="false"
+            android:icon="@drawable/ic_exit_to_app_black_24dp"
+            android:title="@string/logout"/>
+    </group>
+
 </menu>
 
